crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_shared_ref_to_vec_of_shared_refs.rs
fn supports_shared_ref_to_vec_of_shared_refs(_xs: &Vec<&i32>) {}

fn main() {}
