crates/tsuno-driver/tests/fixtures/snapshots/fail/supports_vec_alias.rs
use std::vec::Vec as Foo;

fn supports_vec_alias(_xs: Foo<&mut i32>) {}

fn main() {}
